--- a/store/package.json
+++ b/store/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
+    "styled-components": "^5.3.6",
     "sweetalert": "^2.1.2",
     "web-cli": "^1.0.0-prealpha",
     "web-vitals": "^2.1.4",
