--- a/store/package.json
+++ b/store/package.json
@@ -14,6 +14,7 @@
     "react-toastify": "^9.1.1",
     "styled-components": "^5.3.6",
     "sweetalert": "^2.1.2",
+    "swiper": "^8.4.5",
     "web-cli": "^1.0.0-prealpha",
     "web-vitals": "^2.1.4",
     "webpack-dev-server": "^4.11.1",
